Style change to prevent overflow of notification text

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -582,6 +582,13 @@ body
     height:30px;
 }
 
+.user-notification-message
+{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 
 /*----------------------------LOGGER----------------------*/
 #logger-content
